# maikyno_server

./: .env  .gitignore  Cargo.toml  build.rs  diesel.toml  maikyno.db  run.sh  sql.sql
migrations/2025-09-07-013728_create_libraries/: up.sql
migrations/2025-09-09-171720_create_library_dirs/: down.sql  up.sql
migrations/2025-09-09-180248_create_shows/: up.sql
migrations/2025-09-09-190608_create_collections/: up.sql
migrations/2025-09-09-202951_create_media_dirs/: down.sql  up.sql
migrations/2025-09-11-004657_create_collection_shows/: down.sql  up.sql
migrations/2025-09-11-004813_create_collection_movies/: down.sql  up.sql
migrations/2025-11-08-001241_create_videos/: up.sql
migrations/2025-11-08-211537_create_streams/: up.sql
migrations/2025-11-08-213920_create_process_job_video_streams/: up.sql
migrations/2025-11-08-214107_create_process_job_audio_streams/: up.sql
migrations/2025-11-13-193050_create_batches/: up.sql
migrations/2025-11-15-021015_create_process_jobs/: up.sql
migrations/2026-01-03-220106_create_process_job_video_streams/: up.sql
migrations/2026-01-07-195716_create_process_job_audio_streams/: up.sql
migrations/2026-01-18-001034_create_process_job_audio_streams/: down.sql
migrations/2026-02-12-182029_create_process_job_video_streams/: up.sql
migrations/2026-02-12-203516_create_process_job_video_streams/: down.sql  up.sql
migrations/2026-02-14-191143_create_process_job_video_streams/: up.sql
migrations/2026-04-13-223847_create_videos/: up.sql
migrations/2026-04-18-195803_create_streams/: up.sql
src/: av.rs  main.rs
(+86 files in other folders)
