[package]
name = "maikyno_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-files = "0.6.6"
diesel = { version = "2.2.12", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"]}
serde = { version = "1.0.219", features = ["derive"] } 
serde_json = "1.0.143"
dotenvy = "0.15.7"
uuid = { version = "1.18.0", features = ["v4", "serde"]}
derive_more = "2.0.1"
tokio = "1.47.1"

[build-dependencies]
bindgen = "0.72.0"
cc = "1.2.34"
dotenvy = "0.15.7"
pkg-config = "0.3.32"
